--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1422,6 +1422,7 @@
       .trait-item {
         border-radius: .2rem;
         font-weight: 500;
+        height: fit-content;
         padding: .15rem .25rem;
 
         &.label-tier-rare {
