--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -26,6 +26,7 @@
       &:hover {
         background: rgba($gray-color-light, .65);
       }
+
       &:active,
       &.active {
         background: rgba($gray-color-light, .75);
@@ -226,6 +227,44 @@
     }
   }
 
+  // Modal Tip
+  &.modal-tip-container {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    max-height: calc(100vh - 4rem);
+    max-width: 28rem;
+    padding: 1.5rem 2rem;
+    width: calc(100vw - .5rem);
+
+    .modal-tip-body {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      gap: .5rem;
+
+      .token-input {
+        width: 100%;
+        outline: none;
+      }
+
+      .name-input {
+
+        outline: none;
+      }
+
+      .message-input {
+        max-width: 100%;
+        min-width: 100%;
+        max-height: 6rem;
+        min-height: 3rem;
+        outline: none;
+      }
+    }
+  }
+
   // Modal Share
   &.modal-share-container {
     background: #fff;
@@ -274,27 +313,27 @@
         flex-direction: column;
       }
     }
-    
+
     .profile-share-footer {
       padding-top: 1rem;
-  
+
       .input-group-btn {
         position: relative;
       }
-  
+
       .tooltip-copy {
         position: absolute;
       }
     }
-    
+
     .btn-group {
       flex-wrap: wrap;
-  
+
       .btn {
         gap: .2rem;
       }
     }
-    
+
     .profile-share-card {
       background: $bg-color;
       border-radius: .5rem;
@@ -305,11 +344,11 @@
       min-height: 10rem;
       position: relative;
       width: 100%;
-      
+
       @media screen and (max-width: $size-md) {
         min-height: 8rem;
       }
-      
+
       .img-responsive {
         border-radius: .5rem;
         height: 12rem;
@@ -332,7 +371,7 @@
 
     @media screen and (max-width: $size-sm) {
       padding: 1.5rem;
-      
+
       @supports (height: 100dvh) {
         height: calc(100dvh - .5rem);
         width: calc(100dvw - .5rem);
@@ -350,7 +389,7 @@
     }
 
     .modal-profile-cover {
-      backdrop-filter: blur(1rem);  
+      backdrop-filter: blur(1rem);
       height: 7rem;
       left: -2rem;
       position: absolute;
@@ -451,42 +490,42 @@
 
     @media screen and (max-width: $size-sm) {
       padding: 1.5rem;
-      
+
       @supports (height: 100dvh) {
         height: calc(100dvh - .5rem);
         width: calc(100dvw - .5rem);
       }
     }
-    
+
 
     .modal-article-title {
       font-size: 1.2rem;
       margin-bottom: 1.2rem;
     }
 
-  .modal-article-action {
-    margin-bottom: 1.2rem;
-  }
+    .modal-article-action {
+      margin-bottom: 1.2rem;
+    }
 
-  img {
-    height: auto;
-    max-width: 100%;
-  }
+    img {
+      height: auto;
+      max-width: 100%;
+    }
 
-  h1 {
-    font-size: 1.2rem;
-    font-weight: 800;
-  }
+    h1 {
+      font-size: 1.2rem;
+      font-weight: 800;
+    }
 
-  h2 {
-    font-size: 1rem;
-    font-weight: 800;
-  }
+    h2 {
+      font-size: 1rem;
+      font-weight: 800;
+    }
 
-  h3 {
-    font-size: .8rem;
-    font-weight: 800;
-  }
+    h3 {
+      font-size: .8rem;
+      font-weight: 800;
+    }
 
     li {
       p {
@@ -504,7 +543,7 @@
       justify-content: center;
       margin: auto;
       position: relative;
-      
+
       .img-responsive,
       .video-responsive {
         border-radius: .8rem;
@@ -571,6 +610,7 @@
       }
 
       .preview-image {
+
         .img-responsive,
         .video-responsive {
           max-width: 100vw;
@@ -777,12 +817,14 @@
       display: flex;
       justify-content: space-between;
       padding: .6rem;
-      .profile-badge{
+
+      .profile-badge {
         background: transparent;
         box-shadow: none;
         padding: 0;
         min-width: unset;
       }
+
       .list-item-right {
         align-items: center;
         display: flex;
@@ -881,7 +923,7 @@
       gap: .5rem;
       margin: .2rem -.4rem;
       padding: .4rem;
-      
+
       &:focus,
       &:hover {
         background: $bg-color;
