--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -243,16 +243,15 @@
       display: flex;
       flex-direction: column;
       align-content: center;
-      gap: .5rem;
+      gap: .75rem;
 
-      .token-input {
-        width: 100%;
+      .common-input {
         outline: none;
-      }
-
-      .name-input {
-
-        outline: none;
+        border: 1px solid #cecece;
+        padding: .25rem .5rem;
+        font-size: .65rem;
+        font-weight: 400;
+        border-radius: .5rem;
       }
 
       .message-input {
@@ -260,11 +259,21 @@
         min-width: 100%;
         max-height: 6rem;
         min-height: 3rem;
-        outline: none;
       }
 
       .connect-btn {
         width: 100%;
+      }
+
+      .donate-btn {
+        background: #5298FF;
+        border-color: #5298FF;
+      }
+
+      .disabled {
+        user-select: none;
+        pointer-events: none;
+        filter: grayscale(1);
       }
 
       .wrong-network {
