--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -53,6 +53,8 @@
       border: transparent;
       box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
       font-size: .8rem;
+      height: 2.4rem;
+      padding-left: .6rem;
       padding-right: 2.4rem;
 
       &:focus {
