--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -268,6 +268,9 @@
       .donate-btn {
         background: #5298FF;
         border-color: #5298FF;
+        .loading-btn{
+          width: 2rem;
+        }
       }
 
       .disabled {
