--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -74,10 +74,11 @@ body {
 .web3bio-cover {
   &.ui2 {
     background-image:
-      radial-gradient(at 40% 33%, $pride-color-1 0px, transparent 50%),
-      radial-gradient(at 82% 10%, $pride-color-2 0px, transparent 50%),
-      radial-gradient(at 17% 94%, $pride-color-3 0px, transparent 50%),
-      radial-gradient(at 89% 75%, $pride-color-6 0px, transparent 50%);
+      radial-gradient(at 50% -10%, darken($pride-color-1, 10%) 0px, transparent 50%),
+      radial-gradient(at 0% 15%,  darken($pride-color-1, 10%) 0px, transparent 50%),
+      radial-gradient(at 0% 70%, $pride-color-2 0px, transparent 40%),
+      radial-gradient(at 100% 100%, $pride-color-6 0px, transparent 40%),
+      radial-gradient(at 82% 10%, $pride-color-1 0px, transparent 50%);
     display: block;
     height: 100vh;
     left: 0;
@@ -91,7 +92,7 @@ body {
       border-radius: 50%;
       content: "";
       display: block;
-      filter: blur(6rem);
+      filter: blur(7rem);
       height: 50vh;
       position: fixed;
       width: 50vh;
@@ -100,33 +101,98 @@ body {
 
     &::before {
       animation: bg-animation 40s ease infinite;
-      animation-delay: -10s;
-      background: linear-gradient(45deg, $pride-color-1 5%, $pride-color-2 50%, $pride-color-3 95%);
-      bottom: 15vh;
-      left: 15vw;
+      animation-delay: -15s;
+      background: linear-gradient(45deg, $pride-color-6 5%, $pride-color-3 50%, $pride-color-4 95%);
+      left: 5vw;
+      top: 5vh;
     }
 
     &::after {
-      animation: bg-animation 60s ease infinite;
+      animation: bg-animation 40s ease infinite;
       animation-delay: 0;
-      background: linear-gradient(-45deg, $pride-color-7 5%, $pride-color-6 50%, $pride-color-5 95%);
+      background: linear-gradient(-45deg, $pride-color-2 5%, $pride-color-5 50%, $pride-color-6 95%);
       bottom: 5vh;
-      right: 15vw;
+      right: 5vw;
     }
   }
 }
 
 @keyframes bg-animation {
   0% {
-    transform: skewX(30deg) translateX(-50vh);
+    transform: skewX(10deg) translateX(-20vh);
   }
 
   50% {
-    transform: skewX(-30deg) translateX(50vh);
+    transform: skewX(-30deg) translateX(20vh);
   }
 
   100% {
-    transform: skewX(30deg) translateX(-50vh);
+    transform: skewX(10deg) translateX(-20vh);
+  }
+}
+
+//- Web3.bio Header
+.web3bio-header {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 1rem;
+  width: 100%;
+  z-index: 9999;
+
+  .header-menu {
+    align-items: center;
+    backdrop-filter: blur(.2rem);
+    // background: rgba($dark-color, 1);
+    // border: .05rem solid rgba($dark-color, .05);
+    border-radius: .6rem;
+    // box-shadow: 0 .2rem .8rem rgba(0, 0, 0, .025);
+    display: flex;
+    gap: .2rem;
+    justify-content: space-between;
+    padding: .25rem;
+    width: 100%;
+  }
+
+  .column {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.web3bio-logo {
+  align-items: center;
+  background: $dark-color;
+  border-radius: .8rem;
+  box-shadow: 0 .2rem .4rem rgba(0, 0, 0, .25);
+  color: $dark-color;
+  cursor: pointer;
+  display: flex;
+  height: 3rem;
+  justify-content: center;
+  padding: .4rem;
+  position: relative;
+  text-align: left;
+  transition: all .3s ease;
+  user-select: none;
+  width: 3rem;
+  z-index: 1;
+
+  &:focus,
+  &:hover {
+    box-shadow: 0 .3rem .6rem rgba(0, 0, 0, .2);
+    color: $dark-color;
+    text-decoration: none;
+  }
+
+  h1 {
+    font-size: .8rem;
+    font-weight: 700;
+    letter-spacing: -.025rem;
+    line-height: .8rem;
+    margin: 0;
   }
 }
 
@@ -187,84 +253,6 @@ body {
         }
       }
     }
-  }
-}
-
-//- Web3.bio Header
-.web3bio-header {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 1rem;
-  width: 100%;
-  z-index: 9999;
-
-  .web3bio-logo {
-    border-radius: .5rem;
-    box-shadow: 0 .2rem .4rem rgba(0, 0, 0, .25);
-    height: 2rem;
-    padding: .3rem;
-    width: 2rem;
-
-    h1 {
-      font-size: .5rem;
-      line-height: .5rem;
-    }
-  }
-
-  .header-menu {
-    align-items: center;
-    backdrop-filter: blur(.2rem);
-    background: rgba($light-color, .5);
-    border: .05rem solid rgba($light-color, .15);
-    border-radius: .6rem;
-    box-shadow: 0 .2rem .8rem rgba(0, 0, 0, .025);
-    display: flex;
-    gap: .2rem;
-    justify-content: space-between;
-    padding: .25rem;
-    width: 100%;
-  }
-
-  .column {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.web3bio-logo {
-  align-items: center;
-  background: $dark-color;
-  border-radius: .8rem;
-  box-shadow: 0 .2rem .4rem rgba(0, 0, 0, .25);
-  color: $dark-color;
-  cursor: pointer;
-  display: flex;
-  height: 3rem;
-  justify-content: center;
-  padding: .4rem;
-  position: relative;
-  text-align: left;
-  transition: all .3s ease;
-  user-select: none;
-  width: 3rem;
-  z-index: 1;
-
-  &:focus,
-  &:hover {
-    box-shadow: 0 .3rem .6rem rgba(0, 0, 0, .2);
-    color: $dark-color;
-    text-decoration: none;
-  }
-
-  h1 {
-    font-size: .8rem;
-    font-weight: 700;
-    letter-spacing: -.025rem;
-    line-height: .8rem;
-    margin: 0;
   }
 }
 
