--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -76,7 +76,9 @@
       background: #fff;
       box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
       border-radius: .4rem;
-      display: block;
+      display: flex;
+      flex-direction: column;
+      gap: .05rem;
       left: 0;
       overflow-y: auto;
       padding: .5rem;
@@ -88,7 +90,7 @@
       .search-web2-list {
         align-items: center;
         display: flex;
-        gap: .5rem;
+        gap: .25rem;
         width: 100%;
 
         .search-list-item {
@@ -117,10 +119,6 @@
         &:focus,
         &:hover {
           background: rgba($dark-color, .05);
-        }
-
-        &:not(:last-child) {
-          margin-bottom: .05rem;
         }
       }
 
