--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -273,27 +273,27 @@
         flex-direction: column;
       }
     }
-    
+
     .profile-share-footer {
       padding-top: 1rem;
-  
+
       .input-group-btn {
         position: relative;
       }
-  
+
       .tooltip-copy {
         position: absolute;
       }
     }
-    
+
     .btn-group {
       flex-wrap: wrap;
-  
+
       .btn {
         gap: .2rem;
       }
     }
-    
+
     .profile-share-card {
       background: $bg-color;
       border-radius: .5rem;
@@ -304,11 +304,11 @@
       min-height: 10rem;
       position: relative;
       width: 100%;
-      
+
       @media screen and (max-width: $size-md) {
         min-height: 8rem;
       }
-      
+
       .img-responsive {
         border-radius: .5rem;
         height: 12rem;
@@ -319,8 +319,9 @@
     }
   }
 
-  // Modal Profile
-  &.modal-profile-container {
+  // Modal Profile, Modal Guild
+  &.modal-profile-container,
+  &.modal-guild-container {
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -331,7 +332,7 @@
 
     @media screen and (max-width: $size-sm) {
       padding: 1.5rem;
-      
+
       @supports (height: 100dvh) {
         height: calc(100dvh - .5rem);
         width: calc(100dvw - .5rem);
@@ -349,13 +350,17 @@
     }
 
     .modal-profile-cover {
-      backdrop-filter: blur(1rem);  
+      backdrop-filter: blur(1rem);
       height: 7rem;
       left: -2rem;
       position: absolute;
       right: -2rem;
       top: -2rem;
       z-index: -1;
+
+      &.guild {
+        background: linear-gradient(to top, rgba(#36363a, 0) 0%, rgba(#36363a, .35) 100%);
+      }
 
       &.farcaster {
         background: linear-gradient(to top, rgba(#8a63d2, 0) 0%, rgba(#8a63d2, .35) 100%);
@@ -454,42 +459,42 @@
 
     @media screen and (max-width: $size-sm) {
       padding: 1.5rem;
-      
+
       @supports (height: 100dvh) {
         height: calc(100dvh - .5rem);
         width: calc(100dvw - .5rem);
       }
     }
-    
+
 
     .modal-article-title {
       font-size: 1.2rem;
       margin-bottom: 1.2rem;
     }
 
-  .modal-article-action {
-    margin-bottom: 1.2rem;
-  }
+    .modal-article-action {
+      margin-bottom: 1.2rem;
+    }
 
-  img {
-    height: auto;
-    max-width: 100%;
-  }
+    img {
+      height: auto;
+      max-width: 100%;
+    }
 
-  h1 {
-    font-size: 1.2rem;
-    font-weight: 800;
-  }
+    h1 {
+      font-size: 1.2rem;
+      font-weight: 800;
+    }
 
-  h2 {
-    font-size: 1rem;
-    font-weight: 800;
-  }
+    h2 {
+      font-size: 1rem;
+      font-weight: 800;
+    }
 
-  h3 {
-    font-size: .8rem;
-    font-weight: 800;
-  }
+    h3 {
+      font-size: .8rem;
+      font-weight: 800;
+    }
 
     li {
       p {
@@ -507,7 +512,7 @@
       justify-content: center;
       margin: auto;
       position: relative;
-      
+
       .img-responsive,
       .video-responsive {
         border-radius: .8rem;
@@ -574,6 +579,7 @@
       }
 
       .preview-image {
+
         .img-responsive,
         .video-responsive {
           max-width: 100vw;
@@ -600,9 +606,11 @@
     justify-content: center;
     margin: 0 auto;
     position: relative;
+
     &.preview-image-guild {
       padding: 3rem;
     }
+
     &.preview-image-poap {
       padding: 3rem;
 
@@ -782,12 +790,14 @@
       display: flex;
       justify-content: space-between;
       padding: .6rem;
-      .profile-badge{
+
+      .profile-badge {
         background: transparent;
         box-shadow: none;
         padding: 0;
         min-width: unset;
       }
+
       .list-item-right {
         align-items: center;
         display: flex;
@@ -886,7 +896,7 @@
       gap: .5rem;
       margin: .2rem -.4rem;
       padding: .4rem;
-      
+
       &:focus,
       &:hover {
         background: $bg-color;
