--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -359,7 +359,7 @@
       z-index: -1;
 
       &.guild {
-        background: linear-gradient(to top, rgba(#36363a, 0) 0%, rgba(#36363a, .35) 100%);
+        background: linear-gradient(to top, rgba(#6062eb, 0) 0%, rgba(#6062eb, .35) 100%);
       }
 
       &.farcaster {
