--- a/styles/spectre/mixins/_label.scss
+++ b/styles/spectre/mixins/_label.scss
@@ -3,7 +3,7 @@
   align-items: center;
   border-radius: $border-radius;
   display: inline-flex;
-  font-size: 85%;
+  height: fit-content;
   line-height: 1.25;
   padding: .15rem .25rem;
 }
