--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -20,16 +20,16 @@
     z-index: 999;
 
     .btn {
-      background: rgba($gray-color-light, .5);
+      background: rgba($bg-color, .5);
 
       &:focus,
       &:hover {
-        background: rgba($gray-color-light, .65);
+        background: rgba($bg-color, .65);
       }
 
       &:active,
       &.active {
-        background: rgba($gray-color-light, .75);
+        background: rgba($bg-color, .75);
       }
     }
   }
@@ -241,17 +241,15 @@
       padding: 1.5rem;
     }
 
+    .modal-actions {
+      position: absolute;
+    }
+
     .profile-share-header {
       align-items: center;
       display: flex;
       justify-content: space-between;
       padding-bottom: 1.5rem;
-
-      .btn-close {
-        position: absolute;
-        right: 1rem;
-        top: 1rem;
-      }
     }
 
     .profile-share-body {
@@ -326,7 +324,7 @@
     background: #fff;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 2rem);
+    height: calc(100vh - 6rem);
     max-width: 28rem;
     padding: 1.5rem 2rem;
     width: 95%;
@@ -338,6 +336,10 @@
         height: calc(100dvh - .5rem);
         width: calc(100dvw - .5rem);
       }
+    }
+
+    .modal-actions {
+      position: absolute;
     }
 
     .modal-profile-header {
@@ -352,7 +354,7 @@
 
     .modal-profile-cover {
       backdrop-filter: blur(1rem);
-      height: 7rem;
+      height: 5rem;
       left: -2rem;
       position: absolute;
       right: -2rem;
@@ -360,15 +362,15 @@
       z-index: -1;
 
       &.guild {
-        background: linear-gradient(to top, rgba(#6062eb, 0) 0%, rgba(#6062eb, .35) 100%);
+        background: linear-gradient(to top, rgba(#6062eb, 0) 0%, rgba(#6062eb, .35) 200%);
       }
 
       &.farcaster {
-        background: linear-gradient(to top, rgba(#8a63d2, 0) 0%, rgba(#8a63d2, .35) 100%);
+        background: linear-gradient(to top, rgba(#8a63d2, 0) 0%, rgba(#8a63d2, .35) 200%);
       }
 
       &.lens {
-        background: linear-gradient(to top, rgba(#6bc674, 0) 0%, rgba(#6bc674, .35) 100%);
+        background: linear-gradient(to top, rgba(#6bc674, 0) 0%, rgba(#6bc674, .35) 200%);
       }
     }
 
