--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -673,7 +673,7 @@ body {
   }
 
   .feed-token-value {
-    font-weight: 600;
+    font-weight: 500;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -699,8 +699,10 @@ body {
   }
 
   .feed-token-meta {
+    align-items: center;
     color: $gray-color;
-    font-size: .65rem;
+    display: inline-flex;
+    font-size: .6rem;
     font-weight: 400;
     line-height: 1.2rem;
   }
